FULL SETUP OF THE PROJECT
